<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.4">
  <DUT Name="ASCF_CL_ArgumentType" Id="{9007a87e-1827-41a2-b237-d63504c8d284}">
    <Declaration><![CDATA[TYPE ASCF_CL_ArgumentType :
STRUCT
	Source		: SINT				:= 0;					//Selected source (see "AL_enumSourceTypes" for all available sources)
	Index		: UINT				:= 0;					//Index of the array selected via source
	Const 		: ASCF_UnionType;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>